remove pointer bug
